--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -82,7 +82,7 @@ ellipse in [a,b] form
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE__: the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
