--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -126,7 +126,16 @@ __Syntax:__
 
     fl_bb_polygon(points)
 
-general 2d polygon bounding box
+Returns the bounding box of a 2d polygon.
+
+
+__Parameters:__
+
+__points__  
+list of x,y points of the polygon to be used with
+[polygon](https://en.wikibooks.org/wiki/OpenSCAD_User_Manual/Using_the_2D_Subsystem#polygon)
+
+
 
 ---
 
