--- a/orthodocs/foundation/3d.md
+++ b/orthodocs/foundation/3d.md
@@ -1,5 +1,11 @@
-# package 3d
+# package foundation/3d
 
+
+__Includes:__
+
+    foundation/2d
+    foundation/bbox
+    foundation/type_trait
 
 ## Functions
 
