--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -1,9 +1,12 @@
 # package foundation/2d
 
 
-__Includes:__
+## System Context
 
-    foundation/unsafe_defs
+```mermaid
+graph TD
+    A1[foundation/2d] --o|include| A2[foundation/unsafe_defs]
+```
 
 2D primitives.
 
@@ -43,7 +46,11 @@ Exact ellipse bounding box
 __Parameters:__
 
 __e__  
-ellipse in [a,b] form
+ellipse in [a,b] form with
+
+- a: length of the X semi-axis
+- b: length of the Y semi-axis
+
 
 
 ---
@@ -59,10 +66,23 @@ Exact elliptic arc bounding box
 __Parameters:__
 
 __e__  
-outer ellipse in [a,b] form
+outer ellipse in [a,b] form with
+
+- a: length of the X semi-axis
+- b: length of the Y semi-axis
+
 
 __angles__  
-start|end angles
+list containing the start and ending angles for the sector.
+
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+
+    sup ≥ inf
+    distance = sup - inf
+      0° ≤ distance ≤ +360°
+      0° ≤   inf    < +360°
+      0° ≤   sup    < +720°
+
 
 __thick__  
 subtracted to «e» semi-axes defines the inner ellipse ones
@@ -107,7 +127,7 @@ __Syntax:__
 Calculates the exact bounding box of a polygon inscribed in a circumference.
 See also [fl_bb_polygon()](#function-fl_bb_polygon).
 
-__NOTE__: «r» and «d» are mutually exclusive.
+:memo: __NOTE:__ «r» and «d» are mutually exclusive.
 
 
 __Parameters:__
@@ -159,6 +179,18 @@ radius of the sector
 __d__  
 diameter of the sector
 
+__angles__  
+list containing the start and ending angles for the sector.
+
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+
+    sup ≥ inf
+    distance = sup - inf
+      0° ≤ distance ≤ +360°
+      0° ≤   inf    < +360°
+      0° ≤   sup    < +720°
+
+
 
 ---
 
@@ -198,7 +230,11 @@ __Syntax:__
 __Parameters:__
 
 __e__  
-ellipse in [a,b] form
+ellipse in [a,b] form with
+
+- a: length of the X semi-axis
+- b: length of the Y semi-axis
+
 
 
 ---
@@ -221,6 +257,16 @@ __Syntax:__
 
 r(θ): polar equation of ellipse «e» by «θ»
 
+__Parameters:__
+
+__e__  
+ellipse in [a,b] form with
+
+- a: length of the X semi-axis
+- b: length of the Y semi-axis
+
+
+
 ---
 
 ### function fl_ellipseT
@@ -231,8 +277,8 @@ __Syntax:__
 
 Converts «θ» value to the corresponding ellipse «t» parameter
 
-__NOTE__: we need to extend the theoretical function behiond ±π/2 codomain,
-for that we use ramp() and step() function accordingly.
+:memo: __NOTE:__ we need to extend the theoretical function behiond ±π/2 codomain,
+for that we use __ramp__() and __step__() function accordingly.
 
 
 ---
@@ -248,7 +294,11 @@ Returns a 2d list [x,y]: rectangular value of ellipse «e» by «t» (parametric
 __Parameters:__
 
 __e__  
-ellipse in [a,b] form
+ellipse in [a,b] form with
+
+- a: length of the X semi-axis
+- b: length of the Y semi-axis
+
 
 __t__  
 parametric input 0≤t<360
@@ -276,7 +326,7 @@ ellipses in [a,b] form
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE__: the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -295,6 +345,7 @@ __Syntax:__
     fl_intersection(line1,line2,in1=true,in2=true)
 
 line to line intersection as from [Line–line intersection](https://en.wikipedia.org/wiki/Line-line_intersection)
+
 
 __Parameters:__
 
@@ -349,7 +400,16 @@ __Syntax:__
 __Parameters:__
 
 __angles__  
-start|end angles in whatever order
+list containing the start and ending angles for the sector.
+
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+
+    sup ≥ inf
+    distance = sup - inf
+      0° ≤ distance ≤ +360°
+      0° ≤   inf    < +360°
+      0° ≤   sup    < +720°
+
 
 
 ---
@@ -383,22 +443,6 @@ Aany combination is allowed i.e.
     corners=[r,[a,b],0,0] ⇒ corners=[[r,r],[a,b],[0,0],[0,0]] == rectangle with circular arc on quadrant I, elliptical arc on quadrant II and squared on quadrants III,IV
 
 
-
----
-
-### function ramp
-
-__Syntax:__
-
-    ramp(angle)
-
----
-
-### function step
-
-__Syntax:__
-
-    step(angle)
 
 ## Modules
 
@@ -501,7 +545,16 @@ __d__
 outer diameter
 
 __angles__  
-start and stop angles
+list containing the start and ending angles for the sector.
+
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+
+    sup ≥ inf
+    distance = sup - inf
+      0° ≤ distance ≤ +360°
+      0° ≤   inf    < +360°
+      0° ≤   sup    < +720°
+
 
 __thick__  
 subtracted to radius defines the inner one
@@ -529,7 +582,11 @@ __verbs__
 supported verbs: FL_ADD, FL_AXES, FL_BBOX
 
 __e__  
-ellipse in [a,b] form
+ellipse in [a,b] form with
+
+- a: length of the X semi-axis
+- b: length of the Y semi-axis
+
 
 
 ---
@@ -546,7 +603,11 @@ __verbs__
 supported verbs: FL_ADD, FL_AXES, FL_BBOX
 
 __e__  
-outer ellipse in [a,b] form
+outer ellipse in [a,b] form with
+
+- a: length of the X semi-axis
+- b: length of the Y semi-axis
+
 
 __thick__  
 subtracted to outer ellipses axes defines the internal one
@@ -566,10 +627,23 @@ __verbs__
 supported verbs: FL_ADD, FL_AXES, FL_BBOX
 
 __e__  
-outer ellipse in [a,b] form
+outer ellipse in [a,b] form with
+
+- a: length of the X semi-axis
+- b: length of the Y semi-axis
+
 
 __angles__  
-start|end angles
+list containing the start and ending angles for the sector.
+
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+
+    sup ≥ inf
+    distance = sup - inf
+      0° ≤ distance ≤ +360°
+      0° ≤   inf    < +360°
+      0° ≤   sup    < +720°
+
 
 __thick__  
 subtracted to «e» semi-axes defines the inner ellipse ones
@@ -589,10 +663,23 @@ __verbs__
 supported verbs: FL_ADD, FL_AXES, FL_BBOX
 
 __e__  
-ellipse in [a,b] form
+ellipse in [a,b] form with
+
+- a: length of the X semi-axis
+- b: length of the Y semi-axis
+
 
 __angles__  
-start|end angles in whatever order
+list containing the start and ending angles for the sector.
+
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+
+    sup ≥ inf
+    distance = sup - inf
+      0° ≤ distance ≤ +360°
+      0° ≤   inf    < +360°
+      0° ≤   sup    < +720°
+
 
 
 ---
@@ -624,6 +711,21 @@ number of edges
 __Syntax:__
 
     fl_sector(verbs=FL_ADD,r=1,d,angles,quadrant)
+
+__Parameters:__
+
+__angles__  
+list containing the start and ending angles for the sector.
+
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+
+    sup ≥ inf
+    distance = sup - inf
+      0° ≤ distance ≤ +360°
+      0° ≤   inf    < +360°
+      0° ≤   sup    < +720°
+
+
 
 ---
 
