--- a/orthodocs/foundation/3d.md
+++ b/orthodocs/foundation/3d.md
@@ -1,11 +1,14 @@
 # package foundation/3d
 
 
-__Includes:__
+## System Context
 
-    foundation/2d
-    foundation/bbox
-    foundation/type_trait
+```mermaid
+graph TD
+    A1[foundation/3d] --o|include| A2[foundation/2d]
+    A1 --o|include| A3[foundation/bbox]
+    A1 --o|include| A4[foundation/type_trait]
+```
 
 ## Functions
 
