--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -1,10 +1,10 @@
 # package foundation/2d
 
 
-## System Context
+## Dependencies
 
 ```mermaid
-graph TD
+graph LR
     A1[foundation/2d] --o|include| A2[foundation/unsafe_defs]
 ```
 
