--- a/orthodocs/foundation/3d.md
+++ b/orthodocs/foundation/3d.md
@@ -1,10 +1,10 @@
 # package foundation/3d
 
 
-## System Context
+## Dependencies
 
 ```mermaid
-graph TD
+graph LR
     A1[foundation/3d] --o|include| A2[foundation/2d]
     A1 --o|include| A3[foundation/bbox]
     A1 --o|include| A4[foundation/type_trait]
