--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -1,6 +1,5 @@
 # package foundation/2d
 
-
 ## Dependencies
 
 ```mermaid
@@ -12,14 +11,15 @@ graph LR
 
 ## Functions
 
-
 ---
 
 ### function fl_bb_arc
 
 __Syntax:__
 
-    fl_bb_arc(r=1,d,angles,thick)
+```text
+fl_bb_arc(r=1,d,angles,thick)
+```
 
 exact arc bounding box
 
@@ -29,7 +29,9 @@ exact arc bounding box
 
 __Syntax:__
 
-    fl_bb_circle(r=1,d)
+```text
+fl_bb_circle(r=1,d)
+```
 
 exact circle bounding box
 
@@ -39,7 +41,9 @@ exact circle bounding box
 
 __Syntax:__
 
-    fl_bb_ellipse(e)
+```text
+fl_bb_ellipse(e)
+```
 
 Exact ellipse bounding box
 
@@ -59,7 +63,9 @@ ellipse in [a,b] form with
 
 __Syntax:__
 
-    fl_bb_ellipticArc(e,angles,thick)
+```text
+fl_bb_ellipticArc(e,angles,thick)
+```
 
 Exact elliptic arc bounding box
 
@@ -94,7 +100,9 @@ subtracted to «e» semi-axes defines the inner ellipse ones
 
 __Syntax:__
 
-    fl_bb_ellipticSector(e,angles)
+```text
+fl_bb_ellipticSector(e,angles)
+```
 
 Exact elliptic sector bounding box
 
@@ -122,7 +130,9 @@ list containing the start and ending angles for the sector.
 
 __Syntax:__
 
-    fl_bb_ipoly(r,d,n)
+```text
+fl_bb_ipoly(r,d,n)
+```
 
 Calculates the exact bounding box of a polygon inscribed in a circumference.
 See also [fl_bb_polygon()](#function-fl_bb_polygon).
@@ -148,7 +158,9 @@ number of edges for the inscribed polygon
 
 __Syntax:__
 
-    fl_bb_polygon(points)
+```text
+fl_bb_polygon(points)
+```
 
 Returns the bounding box of a 2d polygon.
 
@@ -167,7 +179,9 @@ list of x,y points of the polygon to be used with
 
 __Syntax:__
 
-    fl_bb_sector(r=1,d,angles)
+```text
+fl_bb_sector(r=1,d,angles)
+```
 
 Returns the exact bounding box of a sector.
 
@@ -198,7 +212,9 @@ list containing the start and ending angles for the sector.
 
 __Syntax:__
 
-    fl_circle(r=1,center=[0,0])
+```text
+fl_circle(r=1,center=[0,0])
+```
 
 ---
 
@@ -206,7 +222,9 @@ __Syntax:__
 
 __Syntax:__
 
-    fl_circleXY(r,t)
+```text
+fl_circleXY(r,t)
+```
 
 Rectangular value [x,y] of circle of ray «r» by «t» (parametric)
 
@@ -225,7 +243,9 @@ __t__
 
 __Syntax:__
 
-    fl_ellipse(e)
+```text
+fl_ellipse(e)
+```
 
 __Parameters:__
 
@@ -243,7 +263,9 @@ ellipse in [a,b] form with
 
 __Syntax:__
 
-    fl_ellipseP(e)
+```text
+fl_ellipseP(e)
+```
 
 APPROXIMATED ellipse perimeter
 
@@ -253,7 +275,9 @@ APPROXIMATED ellipse perimeter
 
 __Syntax:__
 
-    fl_ellipseR(e,theta)
+```text
+fl_ellipseR(e,theta)
+```
 
 r(θ): polar equation of ellipse «e» by «θ»
 
@@ -273,7 +297,9 @@ ellipse in [a,b] form with
 
 __Syntax:__
 
-    fl_ellipseT(e,angle)
+```text
+fl_ellipseT(e,angle)
+```
 
 Converts «θ» value to the corresponding ellipse «t» parameter
 
@@ -287,7 +313,9 @@ for that we use __ramp__() and __step__() function accordingly.
 
 __Syntax:__
 
-    fl_ellipseXY(e,t,angle)
+```text
+fl_ellipseXY(e,t,angle)
+```
 
 Returns a 2d list [x,y]: rectangular value of ellipse «e» by «t» (parametric) or «angle» (polar) input
 
@@ -313,7 +341,9 @@ polar input 0≤angle<360
 
 __Syntax:__
 
-    fl_ellipticSector(e,angles)
+```text
+fl_ellipticSector(e,angles)
+```
 
 Calculates the point of an elliptic sectors.
 
@@ -342,7 +372,9 @@ list containing the start and ending angles for the sector.
 
 __Syntax:__
 
-    fl_intersection(line1,line2,in1=true,in2=true)
+```text
+fl_intersection(line1,line2,in1=true,in2=true)
+```
 
 line to line intersection as from [Line–line intersection](https://en.wikipedia.org/wiki/Line-line_intersection)
 
@@ -368,7 +400,9 @@ solution valid if inside segment 2
 
 __Syntax:__
 
-    fl_quadrant(quadrant,type,bbox,default=I)
+```text
+fl_quadrant(quadrant,type,bbox,default=I)
+```
 
 Calculates the translation matrix needed for moving a shape in the provided
 2d quadrant.
@@ -395,7 +429,9 @@ returned matrix if «quadrant» is undef
 
 __Syntax:__
 
-    fl_sector(r=1,d,angles)
+```text
+fl_sector(r=1,d,angles)
+```
 
 __Parameters:__
 
@@ -418,7 +454,9 @@ list containing the start and ending angles for the sector.
 
 __Syntax:__
 
-    fl_square(size=[1,1],corners=[0,0,0,0])
+```text
+fl_square(size=[1,1],corners=[0,0,0,0])
+```
 
 __Parameters:__
 
