--- a/orthodocs/foundation/3d.md
+++ b/orthodocs/foundation/3d.md
@@ -1,6 +1,5 @@
 # package foundation/3d
 
-
 ## Dependencies
 
 ```mermaid
@@ -12,14 +11,15 @@ graph LR
 
 ## Functions
 
-
 ---
 
 ### function fl_3d_AxisList
 
 __Syntax:__
 
-    fl_3d_AxisList(axes)
+```text
+fl_3d_AxisList(axes)
+```
 
 Build a floating semi-axis list from literal semi-axis list.
 
@@ -49,7 +49,9 @@ semi-axis list (es.["-x","±Z"])
 
 __Syntax:__
 
-    fl_3d_AxisVList(kvs,axes)
+```text
+fl_3d_AxisVList(kvs,axes)
+```
 
 Build an full semi-axis value list from the key/value list «kvs».
 Build a full boolean semi-axis value list from literal semi-axis list «axes»
@@ -96,7 +98,9 @@ semi-axis list (es.["-x","±Z"])
 
 __Syntax:__
 
-    fl_3d_abs(a)
+```text
+fl_3d_abs(a)
+```
 
 Transforms a vector inside the +X+Y+Z octant
 
@@ -107,7 +111,9 @@ Transforms a vector inside the +X+Y+Z octant
 
 __Syntax:__
 
-    fl_3d_axisIsSet(axis,list)
+```text
+fl_3d_axisIsSet(axis,list)
+```
 
 wether «axis» is present in floating semi-axis list
 
@@ -117,7 +123,9 @@ wether «axis» is present in floating semi-axis list
 
 __Syntax:__
 
-    fl_3d_axisValue(axis,values)
+```text
+fl_3d_axisValue(axis,values)
+```
 
 returns the «axis» value from a full semi-axis value list
 
@@ -127,7 +135,9 @@ returns the «axis» value from a full semi-axis value list
 
 __Syntax:__
 
-    fl_3d_max(a,b)
+```text
+fl_3d_max(a,b)
+```
 
 Builds a max vector
 
@@ -138,7 +148,9 @@ Builds a max vector
 
 __Syntax:__
 
-    fl_3d_min(a,b)
+```text
+fl_3d_min(a,b)
+```
 
 Builds a minor vector
 
@@ -149,7 +161,9 @@ Builds a minor vector
 
 __Syntax:__
 
-    fl_3d_orthoPlane(axis)
+```text
+fl_3d_orthoPlane(axis)
+```
 
 Cartesian plane from axis
 
@@ -160,7 +174,9 @@ Cartesian plane from axis
 
 __Syntax:__
 
-    fl_3d_planarProjection(vector,plane)
+```text
+fl_3d_planarProjection(vector,plane)
+```
 
 Projection of «vector» onto a cartesian «plane»
 
@@ -180,7 +196,9 @@ cartesian plane by vector with ([-1,+1,0]==[1,1,0]==XY)
 
 __Syntax:__
 
-    fl_3d_sign(axis)
+```text
+fl_3d_sign(axis)
+```
 
 returns the sign of a semi-axis (-1,+1)
 
@@ -190,7 +208,9 @@ returns the sign of a semi-axis (-1,+1)
 
 __Syntax:__
 
-    fl_3d_vectorialProjection(vector,axis)
+```text
+fl_3d_vectorialProjection(vector,axis)
+```
 
 Projection of «vector» onto a cartesian «axis»
 
@@ -210,7 +230,9 @@ cartesian axis ([-1,0,0]==[1,0,0]==X)
 
 __Syntax:__
 
-    fl_bb_accum(axis,gap=0,bbcs)
+```text
+fl_bb_accum(axis,gap=0,bbcs)
+```
 
 Accumulates a list of bounding boxes along a direction.
 
@@ -252,7 +274,9 @@ bounding box corners
 
 __Syntax:__
 
-    fl_bb_cylinder(h,r,r1,r2,d,d1,d2)
+```text
+fl_bb_cylinder(h,r,r1,r2,d,d1,d2)
+```
 
 __Parameters:__
 
@@ -284,7 +308,9 @@ diameter, top of cone. r2 = d2 / 2.
 
 __Syntax:__
 
-    fl_bb_prism(n,l,l1,l2,h)
+```text
+fl_bb_prism(n,l,l1,l2,h)
+```
 
 __Parameters:__
 
@@ -310,7 +336,9 @@ height of the prism
 
 __Syntax:__
 
-    fl_cube_defaults(size=[1,1,1])
+```text
+fl_cube_defaults(size=[1,1,1])
+```
 
 cube defaults for positioning (fl_bb_cornersKV)
 and direction (fl_directorKV, fl_rotorKV).
@@ -322,7 +350,9 @@ and direction (fl_directorKV, fl_rotorKV).
 
 __Syntax:__
 
-    fl_cylinder_defaults(h,r,r1,r2,d,d1,d2)
+```text
+fl_cylinder_defaults(h,r,r1,r2,d,d1,d2)
+```
 
 cylinder defaults for positioning (fl_bb_cornersKV)
 and direction (fl_directorKV, fl_rotorKV).
@@ -358,7 +388,9 @@ diameter, top of cone. r2 = d2 / 2.
 
 __Syntax:__
 
-    fl_direction(proto,direction,default)
+```text
+fl_direction(proto,direction,default)
+```
 
 Direction matrix transforming native coordinates along new direction.
 
@@ -392,7 +424,9 @@ default coordinate system by [director,rotor], overrides «proto» settings
 
 __Syntax:__
 
-    fl_octant(octant,type,bbox,default=I)
+```text
+fl_octant(octant,type,bbox,default=I)
+```
 
 __Parameters:__
 
@@ -415,7 +449,9 @@ returned matrix if «octant» is undef
 
 __Syntax:__
 
-    fl_planeAlign(ax,ay,bx,by,a,b)
+```text
+fl_planeAlign(ax,ay,bx,by,a,b)
+```
 
 From [Rotation matrix from plane A to B](https://math.stackexchange.com/questions/1876615/rotation-matrix-from-plane-a-to-b)
 
@@ -429,7 +465,9 @@ When ax and bx are orthogonal to ay and by respectively calculation are simplifi
 
 __Syntax:__
 
-    fl_prism_defaults(n,l,l1,l2,h)
+```text
+fl_prism_defaults(n,l,l1,l2,h)
+```
 
 prism defaults for positioning (fl_bb_cornersKV)
 and direction (fl_directorKV, fl_rotorKV).
@@ -459,7 +497,9 @@ height of the prism
 
 __Syntax:__
 
-    fl_sphere_defaults(r=[1,1,1],d)
+```text
+fl_sphere_defaults(r=[1,1,1],d)
+```
 
 sphere defaults for positioning (fl_bb_cornersKV)
 and direction (fl_directorKV, fl_rotorKV).
@@ -471,7 +511,9 @@ and direction (fl_directorKV, fl_rotorKV).
 
 __Syntax:__
 
-    lay_bb_corners(axis,gap=0,types)
+```text
+lay_bb_corners(axis,gap=0,types)
+```
 
 returns the bounding box corners of a layout
 
@@ -494,7 +536,9 @@ list of types
 
 __Syntax:__
 
-    lay_bb_size(axis,gap,types)
+```text
+lay_bb_size(axis,gap,types)
+```
 
 calculates the overall bounding box size of a layout
 
@@ -505,7 +549,9 @@ calculates the overall bounding box size of a layout
 
 __Syntax:__
 
-    lay_group(axis,gap,types)
+```text
+lay_group(axis,gap,types)
+```
 
 creates a group with the resulting bounding box corners of a layout
 
