--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -9,23 +9,9 @@ graph LR
 
 2D primitives.
 
-Copyright © 2021-2022 Giampiero Gabbiani (giampiero@gabbiani.org)
 
-This file is part of the 'OpenSCAD Foundation Library' (OFL).
 
-OFL is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-OFL is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with OFL.  If not, see <http: //www.gnu.org/licenses/>.
-
+*Published under __GNU General Public License v3__*
 
 ## Functions
 
@@ -99,7 +85,7 @@ outer ellipse in [a,b] form with
 __angles__  
 list containing the start and ending angles for the sector.
 
-:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -132,7 +118,7 @@ ellipse in [a,b] form
 __angles__  
 list containing the start and ending angles for the sector.
 
-:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -153,9 +139,9 @@ fl_bb_ipoly(r,d,n)
 ```
 
 Calculates the exact bounding box of a polygon inscribed in a circumference.
-See also [fl_bb_polygon()](#function-fl_bb_polygon).
+See also [[fl_bb_polygon()](foundation/2d.md#function-fl_bb_polygon)](#function-fl_bb_polygon).
 
-:memo: __NOTE:__ «r» and «d» are mutually exclusive.
+__NOTE:__ «r» and «d» are mutually exclusive.
 
 
 __Parameters:__
@@ -214,7 +200,7 @@ diameter of the sector
 __angles__  
 list containing the start and ending angles for the sector.
 
-:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -321,7 +307,7 @@ fl_ellipseT(e,angle)
 
 Converts «θ» value to the corresponding ellipse «t» parameter
 
-:memo: __NOTE:__ we need to extend the theoretical function behiond ±π/2 codomain,
+__NOTE:__ we need to extend the theoretical function behiond ±π/2 codomain,
 for that we use __ramp__() and __step__() function accordingly.
 
 
@@ -374,7 +360,7 @@ ellipses in [a,b] form
 __angles__  
 list containing the start and ending angles for the sector.
 
-:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -456,7 +442,7 @@ __Parameters:__
 __angles__  
 list containing the start and ending angles for the sector.
 
-:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -501,7 +487,6 @@ Aany combination is allowed i.e.
 
 
 ## Modules
-
 
 ---
 
@@ -603,7 +588,7 @@ outer diameter
 __angles__  
 list containing the start and ending angles for the sector.
 
-:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -692,7 +677,7 @@ outer ellipse in [a,b] form with
 __angles__  
 list containing the start and ending angles for the sector.
 
-:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -728,7 +713,7 @@ ellipse in [a,b] form with
 __angles__  
 list containing the start and ending angles for the sector.
 
-:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -773,7 +758,7 @@ __Parameters:__
 __angles__  
 list containing the start and ending angles for the sector.
 
-:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -799,7 +784,7 @@ Each zero means that the corresponding corner is squared.
 Defaults to a 'perfect' rectangle with four squared corners.
 Scalar value R for «vertices» means corners=[R,R,R,R]
 
-See also [function fl_square()](#function-fl_square) for more complete examples.
+See also [function [fl_square()](foundation/2d.md#function-fl_square)](#function-fl_square) for more complete examples.
 
 
 
