--- a/orthodocs/foundation/3d.md
+++ b/orthodocs/foundation/3d.md
@@ -11,23 +11,9 @@ graph LR
 
 3d primitives
 
-Copyright © 2021-2022 Giampiero Gabbiani (giampiero@gabbiani.org)
 
-This file is part of the 'OpenSCAD Foundation Library' (OFL).
 
-OFL is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-OFL is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with OFL.  If not, see <http: //www.gnu.org/licenses/>.
-
+*Published under __GNU General Public License v3__*
 
 ## Functions
 
@@ -578,7 +564,6 @@ creates a group with the resulting bounding box corners of a layout
 
 ## Modules
 
-
 ---
 
 ### module fl_bb_add
@@ -672,7 +657,7 @@ __Syntax:__
     fl_direct(proto,direction,default)
 
 Applies a direction matrix to its children.
-See also fl_direction() function comments.
+See also [fl_direction()](foundation/3d.md#function-fl_direction) function comments.
 
 
 __Parameters:__
