--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -139,7 +139,7 @@ fl_bb_ipoly(r,d,n)
 ```
 
 Calculates the exact bounding box of a polygon inscribed in a circumference.
-See also [[fl_bb_polygon()](foundation/2d.md#function-fl_bb_polygon)](#function-fl_bb_polygon).
+See also [fl_bb_polygon()](#function-fl_bb_polygon).
 
 __NOTE:__ «r» and «d» are mutually exclusive.
 
@@ -784,7 +784,7 @@ Each zero means that the corresponding corner is squared.
 Defaults to a 'perfect' rectangle with four squared corners.
 Scalar value R for «vertices» means corners=[R,R,R,R]
 
-See also [function [fl_square()](foundation/2d.md#function-fl_square)](#function-fl_square) for more complete examples.
+See also [function [fl_square()](#function-fl_square)](#function-fl_square) for more complete examples.
 
 
 
