--- a/orthodocs/foundation/3d.md
+++ b/orthodocs/foundation/3d.md
@@ -657,7 +657,7 @@ __Syntax:__
     fl_direct(proto,direction,default)
 
 Applies a direction matrix to its children.
-See also [fl_direction()](foundation/3d.md#function-fl_direction) function comments.
+See also [fl_direction()](#function-fl_direction) function comments.
 
 
 __Parameters:__
