--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -85,7 +85,7 @@ outer ellipse in [a,b] form with
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -118,7 +118,7 @@ ellipse in [a,b] form
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -141,7 +141,7 @@ fl_bb_ipoly(r,d,n)
 Calculates the exact bounding box of a polygon inscribed in a circumference.
 See also [fl_bb_polygon()](#function-fl_bb_polygon).
 
-__NOTE:__ «r» and «d» are mutually exclusive.
+:memo: __NOTE:__ «r» and «d» are mutually exclusive.
 
 
 __Parameters:__
@@ -200,7 +200,7 @@ diameter of the sector
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -357,7 +357,7 @@ ellipses in [a,b] form
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -439,7 +439,7 @@ __Parameters:__
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -585,7 +585,7 @@ outer diameter
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -674,7 +674,7 @@ outer ellipse in [a,b] form with
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -710,7 +710,7 @@ ellipse in [a,b] form with
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
@@ -755,7 +755,7 @@ __Parameters:__
 __angles__  
 list containing the start and ending angles for the sector.
 
-__NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
+:memo: __NOTE:__ the provided angles are always reduced in the form [inf,sup] with:
 
     sup ≥ inf
     distance = sup - inf
