--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -781,7 +781,7 @@ Each zero means that the corresponding corner is squared.
 Defaults to a 'perfect' rectangle with four squared corners.
 Scalar value R for «vertices» means corners=[R,R,R,R]
 
-See also [function [fl_square()](#function-fl_square)](#function-fl_square) for more complete examples.
+See also function [fl_square()](#function-fl_square) for more complete examples.
 
 
 
