--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -308,6 +308,9 @@ fl_ellipseT(e,angle)
 
 Converts «θ» value to the corresponding ellipse «t» parameter
 
+:memo: __NOTE:__ we need to extend the theoretical function behiond ±π/2 codomain,
+for that we use __ramp__() and __step__() function accordingly.
+
 
 ---
 
