--- a/orthodocs/foundation/3d.md
+++ b/orthodocs/foundation/3d.md
@@ -699,6 +699,7 @@ Called children can use the following special variables:
     $len    - equal to len(types)
     $size   - equal to bounding box size of $item
 
+TODO: add namespace to children context variables.
 
 
 __Parameters:__
