--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -4,7 +4,8 @@
 
 ```mermaid
 graph LR
-    A1[foundation/2d] --o|include| A2[foundation/unsafe_defs]
+    A1[foundation/2d] --o|include| A2[foundation/mngm]
+    A1 --o|include| A3[foundation/unsafe_defs]
 ```
 
 2D primitives.
@@ -231,7 +232,7 @@ __Syntax:__
 fl_circleXY(r,t)
 ```
 
-Rectangular value [x,y] of circle of ray «r» by «t» (parametric)
+Rectangular value [x,y] of circle of ray «r» by «t» (parametric/polar)
 
 __Parameters:__
 
@@ -308,7 +309,7 @@ fl_ellipseT(e,angle)
 
 Converts «θ» value to the corresponding ellipse «t» parameter
 
-:memo: __NOTE:__ we need to extend the theoretical function behiond ±π/2 codomain,
+:memo: __NOTE:__ we need to extend the theoretical function beyond ±π/2 codomain,
 for that we use __ramp__() and __step__() function accordingly.
 
 
@@ -732,7 +733,7 @@ __Syntax:__
 
     fl_ipoly(verbs=FL_ADD,r,d,n,quadrant)
 
-Regular polygon inscribed a circonference
+Regular polygon inscribed a circumference
 
 __Parameters:__
 
@@ -777,13 +778,16 @@ __Syntax:__
 
     fl_square(verbs=FL_ADD,size=[1,1],corners=[0,0,0,0],quadrant)
 
+Draw a 2d square centered at the origin.
+
+
 __Parameters:__
 
 __corners__  
 List of four radiuses, one for each quadrant's corners.
 Each zero means that the corresponding corner is squared.
 Defaults to a 'perfect' rectangle with four squared corners.
-Scalar value R for «vertices» means corners=[R,R,R,R]
+Scalar value R for «corners» means corners=[R,R,R,R]
 
 See also function [fl_square()](#function-fl_square) for more complete examples.
 
