--- a/orthodocs/foundation/3d.md
+++ b/orthodocs/foundation/3d.md
@@ -6,7 +6,9 @@
 graph LR
     A1[foundation/3d] --o|include| A2[foundation/2d]
     A1 --o|include| A3[foundation/bbox]
-    A1 --o|include| A4[foundation/type_trait]
+    A1 --o|include| A4[foundation/mngm]
+    A1 --o|include| A5[foundation/type_trait]
+    A1 --o|use| A6[dxf]
 ```
 
 3d primitives
@@ -406,6 +408,8 @@ from «proto» or passed explicitly through «default» in the format
 
     [direction axis (director),orthonormal vector (rotor)]
 
+The third axis is obtained through the cross product director X rotor.
+
 New direction is expected in [Axis–angle representation](https://en.wikipedia.org/wiki/Axis%E2%80%93angle_representation)
 in the format
 
@@ -416,7 +420,7 @@ in the format
 __Parameters:__
 
 __proto__  
-prototype with fl_director and fl_rotor properties
+prototype with [fl_director()](defs.md#function-fl_director) and [fl_rotor()](defs.md#function-fl_rotor) properties
 
 __direction__  
 desired direction in axis-angle representation [axis,rotation about]
@@ -573,13 +577,15 @@ __Syntax:__
 
     fl_bb_add(corners,2d=false)
 
-add a bounding box shape
+add a bounding box shape to the scene
 
 
 __Parameters:__
 
 __corners__  
-bounding box corners
+Bounding box corners in [Low,High] format.
+see also [fl_tt_isBoundingBox()](type_trait.md#function-fl_tt_isboundingbox)
+
 
 
 ---
@@ -599,7 +605,9 @@ __verbs__
 FL_ADD,FL_AXES,FL_BBOX
 
 __octant__  
-when undef native positioning is used
+when undef, native positioning is used with the Low bounding box vertex
+into the origin O
+
 
 __direction__  
 desired direction [director,rotation] or native direction if undef
@@ -675,6 +683,25 @@ default coordinate system by [director,rotor], overrides «proto» settings
 
 ---
 
+### module fl_importDxf
+
+__Syntax:__
+
+    fl_importDxf(file,layer,direction)
+
+DXF files import with direction and rotation. By default DXF files are
+imported in the XY plane with no rotation. The «direction» parameter
+specifies a normal to the actual import plane and a rotation about it.
+
+
+__Parameters:__
+
+__direction__  
+direction in axis-angle representation
+
+
+---
+
 ### module fl_layout
 
 __Syntax:__
@@ -731,6 +758,26 @@ desired direction in [vector,rotation] form, native direction when undef ([+X+Y+
 
 __octant__  
 when undef native positioning is used
+
+
+---
+
+### module fl_linear_extrude
+
+__Syntax:__
+
+    fl_linear_extrude(source=[Z,X],direction,length,convexity=10)
+
+Extrusion along arbitrary axis with eventual rotation
+
+
+__Parameters:__
+
+__source__  
+source plane in [director,rotor] format to be extruded along the passed direction
+
+__direction__  
+direction in axis-angle representation
 
 
 ---
