auto documentation update

--- a/orthodocs/foundation/2d.md
+++ b/orthodocs/foundation/2d.md
@@ -4,8 +4,9 @@
 
 ```mermaid
 graph LR
-    A1[foundation/2d] --o|include| A2[foundation/mngm]
-    A1 --o|include| A3[foundation/unsafe_defs]
+    A1[foundation/2d] --o|include| A2[foundation/2d/actions]
+    A1 --o|include| A3[foundation/mngm]
+    A1 --o|include| A4[foundation/unsafe_defs]
 ```
 
 2D primitives.
