--- a/orthodocs/foundation/3d.md
+++ b/orthodocs/foundation/3d.md
@@ -5,8 +5,8 @@
 ```mermaid
 graph LR
     A1[foundation/3d] --o|include| A2[foundation/2d]
-    A1 --o|include| A3[foundation/bbox]
-    A1 --o|include| A4[foundation/mngm]
+    A1 --o|include| A3[foundation/actions]
+    A1 --o|include| A4[foundation/bbox]
     A1 --o|include| A5[foundation/type_trait]
     A1 --o|use| A6[dxf]
 ```
@@ -349,8 +349,7 @@ __Syntax:__
 fl_cube_defaults(size=[1,1,1])
 ```
 
-cube defaults for positioning (fl_bb_cornersKV)
-and direction (fl_directorKV, fl_rotorKV).
+cube defaults for positioning (fl_bb_cornersKV).
 
 
 ---
@@ -363,8 +362,7 @@ __Syntax:__
 fl_cylinder_defaults(h,r,r1,r2,d,d1,d2)
 ```
 
-cylinder defaults for positioning (fl_bb_cornersKV)
-and direction (fl_directorKV, fl_rotorKV).
+cylinder defaults for positioning (fl_bb_cornersKV).
 
 
 __Parameters:__
@@ -398,17 +396,15 @@ diameter, top of cone. r2 = d2 / 2.
 __Syntax:__
 
 ```text
-fl_direction(proto,direction,default)
+fl_direction(direction)
 ```
 
-Direction matrix transforming native coordinates along new direction.
+Return the direction matrix transforming native coordinates along new
+direction.
 
-Native coordinate system is represented by two vectors either retrieved
-from «proto» or passed explicitly through «default» in the format
-
-    [direction axis (director),orthonormal vector (rotor)]
-
-The third axis is obtained through the cross product director X rotor.
+Native coordinate system is represented by two vectors: +Z and +X. +Y axis
+is the cross product between +Z and +X. So with two vector (+Z,+X) we can
+represent the native coordinate system +X,+Y,+Z.
 
 New direction is expected in [Axis–angle representation](https://en.wikipedia.org/wiki/Axis%E2%80%93angle_representation)
 in the format
@@ -419,14 +415,8 @@ in the format
 
 __Parameters:__
 
-__proto__  
-prototype with [fl_director()](defs.md#function-fl_director) and [fl_rotor()](defs.md#function-fl_rotor) properties
-
 __direction__  
 desired direction in axis-angle representation [axis,rotation about]
-
-__default__  
-default coordinate system by [director,rotor], overrides «proto» settings
 
 
 ---
@@ -480,8 +470,7 @@ __Syntax:__
 fl_prism_defaults(n,l,l1,l2,h)
 ```
 
-prism defaults for positioning (fl_bb_cornersKV)
-and direction (fl_directorKV, fl_rotorKV).
+prism defaults for positioning (fl_bb_cornersKV).
 
 
 __Parameters:__
@@ -512,8 +501,7 @@ __Syntax:__
 fl_sphere_defaults(r=[1,1,1],d)
 ```
 
-sphere defaults for positioning (fl_bb_cornersKV)
-and direction (fl_directorKV, fl_rotorKV).
+sphere defaults for positioning (fl_bb_cornersKV).
 
 
 ---
@@ -663,7 +651,7 @@ desired direction [director,rotation], native direction when undef ([+X+Y+Z])
 
 __Syntax:__
 
-    fl_direct(proto,direction,default)
+    fl_direct(direction)
 
 Applies a direction matrix to its children.
 See also [fl_direction()](#function-fl_direction) function comments.
@@ -671,14 +659,8 @@ See also [fl_direction()](#function-fl_direction) function comments.
 
 __Parameters:__
 
-__proto__  
-prototype for native coordinate system
-
 __direction__  
 desired direction in axis-angle representation [axis,rotation about]
-
-__default__  
-default coordinate system by [director,rotor], overrides «proto» settings
 
 
 ---
@@ -766,15 +748,12 @@ when undef native positioning is used
 
 __Syntax:__
 
-    fl_linear_extrude(source=[Z,X],direction,length,convexity=10)
+    fl_linear_extrude(direction,length,convexity=10)
 
 Extrusion along arbitrary axis with eventual rotation
 
 
 __Parameters:__
-
-__source__  
-source plane in [director,rotor] format to be extruded along the passed direction
 
 __direction__  
 direction in axis-angle representation
